--- a/Projects/Frontend/bazaar-frontend/src/screens/ProductPage/CommentCard/commentCard.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/ProductPage/CommentCard/commentCard.scss
@@ -1,26 +1,24 @@
-.commentWrapper{
+.commentWrapper {
+  margin-left: 0rem;
+  margin-bottom: 2rem;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  padding-bottom: 2rem;
+  .commentName {
     margin-left: 0rem;
-    margin-bottom: 2rem;
-    border-bottom: 1px solid rgba(0,0,0,0.2);
-     .commentName{
-        margin-left: 0rem;
-        color: blue;
-    }
+    color: blue;
+  }
 
-     .commentRate{
-        margin-left: 0rem;
-        margin-bottom: 5px;
-        
-    }
+  .commentRate {
+    margin-left: 0rem;
+    margin-bottom: 5px;
+  }
 
-     .commentDate{
-        margin-left: 0rem;
-        color: grey;
-        
-    }
+  .commentDate {
+    margin-left: 0rem;
+    color: grey;
+  }
 
-     .commentContent{
-        margin-left: 0rem;
-        
-    }
+  .commentContent {
+    margin-left: 0rem;
+  }
 }
