Comment submit and anonimous buttons added

--- a/Projects/Frontend/bazaar-frontend/src/screens/ProductPage/productpage.scss
+++ b/Projects/Frontend/bazaar-frontend/src/screens/ProductPage/productpage.scss
@@ -81,6 +81,10 @@
 
       & .formRow {
         margin-bottom: 1rem;
+
+        & .commentSubmitButton {
+          margin-left: 27.6rem;
+        }
       }
     }
   }
