--- a/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
+++ b/Projects/Mobile/Bazaar-iOS/Bazaar-iOS/Base.lproj/Main.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="n1Y-by-cQR">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="n1Y-by-cQR">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Image references" minToolsVersion="12.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -994,7 +994,7 @@
                                                         </connections>
                                                     </button>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nSX-4R-nQN">
-                                                        <rect key="frame" x="20" y="169.99999999999994" width="334" height="36"/>
+                                                        <rect key="frame" x="20" y="170" width="334" height="36"/>
                                                         <color key="backgroundColor" red="1" green="0.64313725489999995" blue="0.35686274509999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                         <state key="normal" title="Login">
@@ -2217,6 +2217,9 @@
                                                                 <integer key="value" value="5"/>
                                                             </userDefinedRuntimeAttribute>
                                                         </userDefinedRuntimeAttributes>
+                                                        <connections>
+                                                            <segue destination="uCT-Ki-9HI" kind="presentation" modalPresentationStyle="fullScreen" id="HSB-zT-ihT"/>
+                                                        </connections>
                                                     </button>
                                                 </subviews>
                                                 <constraints>
@@ -2252,8 +2255,8 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gQd-We-8mx" userLabel="Agreement View">
-                                        <rect key="frame" x="10" y="393.66666666666669" width="394" height="173.00000000000006"/>
+                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gQd-We-8mx" userLabel="Agreement View">
+                                        <rect key="frame" x="10" y="394" width="394" height="214"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillProportionally" alignment="center" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="Mag-gp-Vs2" userLabel="Agreement Stack View">
                                                 <rect key="frame" x="5" y="5" width="384" height="163"/>
@@ -2264,23 +2267,24 @@
                                                         <color key="textColor" red="0.96776050329999996" green="0.6416403651" blue="0.1417042017" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="70m-sd-Tlg" userLabel="Contract View">
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kvj-29-pXw" userLabel="Contract View">
                                                         <rect key="frame" x="15" y="52.999999999999943" width="354" height="50"/>
                                                         <subviews>
-                                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i19-OQ-wpS">
+                                                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="srI-5a-6nJ" userLabel="Contract Text View">
                                                                 <rect key="frame" x="10" y="1" width="334" height="47.666666666666664"/>
-                                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
                                                                 <color key="textColor" systemColor="labelColor"/>
                                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                                             </textView>
                                                         </subviews>
-                                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         <constraints>
-                                                            <constraint firstItem="i19-OQ-wpS" firstAttribute="leading" secondItem="70m-sd-Tlg" secondAttribute="leading" constant="10" id="7Ln-2j-v8G"/>
-                                                            <constraint firstItem="i19-OQ-wpS" firstAttribute="centerY" secondItem="70m-sd-Tlg" secondAttribute="centerY" id="Zb8-m0-GhS"/>
-                                                            <constraint firstItem="i19-OQ-wpS" firstAttribute="height" secondItem="70m-sd-Tlg" secondAttribute="height" multiplier="0.95" id="b5Y-DZ-uZ1"/>
-                                                            <constraint firstAttribute="trailing" secondItem="i19-OQ-wpS" secondAttribute="trailing" constant="10" id="odo-9O-VNQ"/>
+                                                            <constraint firstAttribute="trailing" secondItem="srI-5a-6nJ" secondAttribute="trailing" constant="10" id="6WT-lC-70n"/>
+                                                            <constraint firstItem="srI-5a-6nJ" firstAttribute="height" secondItem="kvj-29-pXw" secondAttribute="height" multiplier="0.95" id="B25-PL-I73"/>
+                                                            <constraint firstItem="srI-5a-6nJ" firstAttribute="leading" secondItem="kvj-29-pXw" secondAttribute="leading" constant="10" id="GIM-2c-l2q"/>
+                                                            <constraint firstItem="srI-5a-6nJ" firstAttribute="centerY" secondItem="kvj-29-pXw" secondAttribute="centerY" id="oM5-Yd-wOK"/>
                                                         </constraints>
                                                         <userDefinedRuntimeAttributes>
                                                             <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
@@ -2321,8 +2325,8 @@
                                                     </stackView>
                                                 </subviews>
                                                 <constraints>
-                                                    <constraint firstAttribute="trailing" secondItem="70m-sd-Tlg" secondAttribute="trailing" constant="15" id="kZS-6I-rOE"/>
-                                                    <constraint firstItem="70m-sd-Tlg" firstAttribute="leading" secondItem="Mag-gp-Vs2" secondAttribute="leading" constant="15" id="uha-Xc-DXr"/>
+                                                    <constraint firstItem="kvj-29-pXw" firstAttribute="leading" secondItem="Mag-gp-Vs2" secondAttribute="leading" constant="15" id="FWH-jk-R4i"/>
+                                                    <constraint firstAttribute="trailing" secondItem="kvj-29-pXw" secondAttribute="trailing" constant="15" id="Qcm-KF-Uw0"/>
                                                 </constraints>
                                             </stackView>
                                         </subviews>
@@ -2432,7 +2436,7 @@
                         <outlet property="cardInfoView" destination="caN-8s-Nqs" id="wAO-Ej-BSU"/>
                         <outlet property="chooseAddressButton" destination="0tU-rV-Q5v" id="ets-L4-niL"/>
                         <outlet property="chooseCardButton" destination="zPD-FV-8Vf" id="e5s-OT-VQX"/>
-                        <outlet property="contractTextView" destination="i19-OQ-wpS" id="rl2-nE-7tR"/>
+                        <outlet property="contractTextView" destination="srI-5a-6nJ" id="HKk-6V-apB"/>
                         <outlet property="goAddressesButton" destination="A5u-dx-fbq" id="SyG-e4-sB9"/>
                         <outlet property="goCardsButton" destination="GJd-f2-wCB" id="L15-n2-xF7"/>
                         <outlet property="scrollView" destination="BmV-01-lyw" id="GKm-3B-e4b"/>
@@ -4278,6 +4282,8 @@
                             <constraint firstItem="qDX-Mh-E0f" firstAttribute="top" secondItem="f4I-9t-zTr" secondAttribute="bottom" constant="20" id="r6L-Jt-lkk"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="5vl-dJ-24X"/>
+                    <nil key="simulatedTopBarMetrics"/>
                     <connections>
                         <outlet property="creditCardsTableView" destination="qDX-Mh-E0f" id="qdf-4u-Nuj"/>
                     </connections>
@@ -5023,10 +5029,10 @@
         </designable>
     </designables>
     <inferredMetricsTieBreakers>
-        <segue reference="Dtb-U7-9lN"/>
+        <segue reference="nph-r1-0sN"/>
+        <segue reference="bek-xH-bIt"/>
         <segue reference="NHr-zy-FFi"/>
         <segue reference="ybP-Ln-r90"/>
-        <segue reference="bek-xH-bIt"/>
         <segue reference="PGv-xX-z7j"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" red="0.96776050329999996" green="0.6416403651" blue="0.1417042017" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -5067,8 +5073,8 @@
         <image name="settings_icon" width="50" height="50"/>
         <image name="settings_icon_blue" width="50" height="50"/>
         <image name="trash_icon" width="100" height="100"/>
-        <image name="xmark.circle" width="13" height="13"/>
         <image name="xmark.circle" catalog="system" width="128" height="121"/>
+        <image name="xmark.circle" width="13" height="13"/>
         <systemColor name="darkTextColor">
             <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
@@ -5077,6 +5083,9 @@
         </systemColor>
         <systemColor name="opaqueSeparatorColor">
             <color red="0.77647058823529413" green="0.77647058823529413" blue="0.78431372549019607" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="scrollViewTexturedBackgroundColor">
+            <color red="0.43529411764705878" green="0.44313725490196082" blue="0.47450980392156861" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="scrollViewTexturedBackgroundColor">
             <color red="0.43529411764705878" green="0.44313725490196082" blue="0.47450980392156861" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
